--- a/titanic/css/view.css
+++ b/titanic/css/view.css
@@ -13,19 +13,12 @@ body{
 
 .container{
     width: 100%;
-    height: 100%;
+    height: auto;
     display: flex;
     justify-content: center;
-    align-items: center;
+
 }
-.container .item{
-    background-image: url('../image/backgrouand.png');
-    padding: 1em;
-    width: 500px;
-    height: auto;
-    border-radius: 2em;
-    box-shadow: 0px 0px 30px green;
-}
+
 h1{
     text-align: center;
     user-select: none;
@@ -71,4 +64,17 @@ h1{
     border-radius: 2em;
     font-weight: bolder;
     padding: 10px 5px;
+}
+
+.img{
+    display: flex;
+    justify-content: center;
+    width: 100%;
+}
+
+.img img{
+        width: 200px;
+        height: 200px;
+        border-radius: 50%;
+        margin-top: 10px;
 }
