add background in login&sign-up

--- a/titanic/css/login.css
+++ b/titanic/css/login.css
@@ -17,6 +17,9 @@
 body{
 	background-image: url();
 	font-size: 14px;
+	background-image: url("../image/logo.jpg");
+	background-repeat: no-repeat;
+	background-size: cover;
 }
 
 /* la class qu contien tous */
